Fixed GUI bug: missing valid until text Fixed GUI bug: valid until date disabled

--- a/app/src/main/res/layout/edit_location.xml
+++ b/app/src/main/res/layout/edit_location.xml
@@ -89,7 +89,7 @@
             android:layout_below="@+id/validText"
             android:layout_alignLeft="@+id/validText"
             android:layout_alignStart="@+id/validText"
-            android:enabled="false" />
+            android:enabled="true" />
 
         <TextView
             android:layout_width="wrap_content"
