--- a/app/src/main/res/layout/edit_location.xml
+++ b/app/src/main/res/layout/edit_location.xml
@@ -9,6 +9,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/editLocationLayout"
+        android:focusableInTouchMode="true"
         android:paddingRight="10dp">
 
         <TextView
