--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="105dp"
+    android:layout_height="70dp"
     android:background="#fefeeb"
     android:focusable="false">
 
 
     <TextView
         android:layout_width="90dp"
-        android:layout_height="100dp"
+        android:layout_height="70dp"
         android:id="@+id/rowTimeText"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:text="try"
+        android:text="00:00"
         android:textSize="30dp"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:layout_above="@+id/view"
+        android:gravity="center_vertical|center_horizontal" />
 
     <TextView
         android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:id="@+id/rowTitleText"
         android:gravity="left|center"
         android:layout_alignParentTop="true"
@@ -27,13 +29,13 @@
         android:layout_toLeftOf="@+id/switch1"
         android:layout_toEndOf="@+id/rowTimeText"
         android:layout_toRightOf="@+id/rowTimeText"
-        android:text="try"
-        android:textSize="30dp"
+        android:text="try maximum length"
+        android:textSize="25dp"
         android:textColor="#000000" />
 
     <TextView
         android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         android:id="@+id/rowLocationText"
         android:gravity="left"
         android:layout_below="@+id/rowTitleText"
@@ -41,13 +43,14 @@
         android:layout_toStartOf="@+id/switch1"
         android:layout_toEndOf="@+id/rowTimeText"
         android:layout_toRightOf="@+id/rowTimeText"
-        android:text="try"
-        android:textSize="30dp"
-        android:textColor="#000000" />
+        android:text="try maximum length"
+        android:textSize="20dp"
+        android:textColor="#000000"
+        android:layout_alignParentBottom="true" />
 
     <Switch
         android:layout_width="70dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/switch1"
         android:checked="false"
         android:gravity="center"
@@ -62,7 +65,7 @@
         android:layout_height="2dp"
         android:background="#00FFFF"
         android:layout_below="@+id/rowLocationText"
-        ></View>
+        android:id="@+id/view"></View>
 
     <View
         android:layout_width="2dp"
