--- a/app/src/main/res/layout/activity_main_fab_menu.xml
+++ b/app/src/main/res/layout/activity_main_fab_menu.xml
@@ -26,13 +26,13 @@
         android:visibility="invisible"
         app:fabSize="mini" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_menu_share"
-        android:visibility="invisible"
-        app:fabSize="mini" />
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/fab_3"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom|end"-->
+        <!--android:layout_margin="@dimen/fab_margin"-->
+        <!--android:src="@android:drawable/ic_menu_share"-->
+        <!--android:visibility="invisible"-->
+        <!--app:fabSize="mini" />-->
 </FrameLayout>
