--- a/app/src/main/res/layout/view_time.xml
+++ b/app/src/main/res/layout/view_time.xml
@@ -8,7 +8,8 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:paddingRight="10dp">
+        android:paddingRight="10dp"
+        android:id="@+id/viewTimeLayout">
 
         <TextView
             android:layout_width="wrap_content"
