--- a/app/src/main/res/layout/edit_location.xml
+++ b/app/src/main/res/layout/edit_location.xml
@@ -77,7 +77,8 @@
             android:scaleType="fitXY"
             android:layout_below="@+id/editTitle"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="false" />
+            android:layout_alignParentEnd="false"
+            android:visibility="invisible" />
 
         <TextView
             android:layout_width="wrap_content"
