--- a/app/src/main/res/layout/reminder_card.xml
+++ b/app/src/main/res/layout/reminder_card.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="100dp"
     android:layout_marginBottom="16dp"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
@@ -19,8 +19,8 @@
 
         <ImageView
             android:id="@+id/list_avatar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="10dp"
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_toRightOf="@+id/list_avatar"
-            android:text="Android "
+            android:text=""
             android:textColor="#000000"
             android:textAppearance="?attr/textAppearanceListItem"
             android:textSize="16sp" />
@@ -46,11 +46,12 @@
             android:layout_below="@+id/list_title"
             android:layout_marginLeft="16dp"
             android:layout_toRightOf="@+id/list_avatar"
+            android:layout_marginTop="5dp"
             android:textColor="#000000"
             android:ellipsize="end"
             android:singleLine="true"
             android:text="Place to dive into android programming"
             android:textAppearance="?attr/textAppearanceListItem"
-            android:textSize="14sp" />
+            android:textSize="12sp" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
