--- a/app/src/main/res/layout/reminder_card.xml
+++ b/app/src/main/res/layout/reminder_card.xml
@@ -8,7 +8,8 @@
     android:layout_marginRight="16dp"
     android:background="#C5CAE9"
     android:foreground="?attr/selectableItemBackground"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    android:elevation="5dp">
     <RelativeLayout
         android:layout_width="match_parent"
         android:gravity="center"
@@ -18,7 +19,7 @@
 
 
         <ImageView
-            android:id="@+id/list_avatar"
+            android:id="@+id/reminder_icon"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_alignParentTop="true"
@@ -28,24 +29,39 @@
              />
 
         <TextView
-            android:id="@+id/list_title"
+            android:id="@+id/reminder_title"
             android:layout_alignParentTop="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:layout_toRightOf="@+id/list_avatar"
+            android:layout_toRightOf="@+id/reminder_icon"
             android:text=""
             android:textColor="#000000"
             android:textAppearance="?attr/textAppearanceListItem"
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/list_desc"
+            android:id="@+id/reminder_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/list_title"
+            android:layout_below="@+id/reminder_title"
             android:layout_marginLeft="16dp"
-            android:layout_toRightOf="@+id/list_avatar"
+            android:layout_toRightOf="@+id/reminder_icon"
+            android:layout_marginTop="5dp"
+            android:textColor="#000000"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:text="Place to dive into android programming"
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/reminder_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/reminder_location"
+            android:layout_marginLeft="16dp"
+            android:layout_toRightOf="@+id/reminder_icon"
             android:layout_marginTop="5dp"
             android:textColor="#000000"
             android:ellipsize="end"
