--- a/app/src/main/res/menu/menu_location.xml
+++ b/app/src/main/res/menu/menu_location.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="hk.ust.cse.comp4521.reminder.MapsActivity">
+    tools:context=".view.MapsActivity">
 
     <item
         android:id="@+id/location_cancel"
