--- a/app/src/main/res/menu/menu_save.xml
+++ b/app/src/main/res/menu/menu_save.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="hk.ust.cse.comp4521.reminder.TimeReminderActivity">
+    tools:context=".view.TimeReminderActivity">
 
     <item
         android:id="@+id/action_cancel"
