--- a/app/src/main/res/layout/edit_time_container.xml
+++ b/app/src/main/res/layout/edit_time_container.xml
@@ -2,10 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ScrollView
+    <!--<ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <include layout="@layout/edit_time" />
+
+    </ScrollView>-->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/set_time_reminder"/>
+
     </ScrollView>
+
 </LinearLayout>
