--- a/app/src/main/res/layout/set_time_reminder.xml
+++ b/app/src/main/res/layout/set_time_reminder.xml
@@ -2,8 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/setTimeReminderLayout"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".view.TimeReminderActivity">
 
     <!-- Header -->
     <RelativeLayout
@@ -18,10 +20,11 @@
         android:orientation="vertical">
 
         <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Library Name"
-            android:text="MaterialEditText"
+            android:hint="Title"
+            android:text="Title"
             android:textCursorDrawable="@drawable/text_cursor_cyan"
             android:textSize="34sp"
             app:met_baseColor="@android:color/white"
@@ -59,6 +62,7 @@
             android:hint="Click here to select a time"
             android:textColor="@color/text_color"
             android:layout_below="@id/time_label"
+            android:editable="false"
             />
 
         <!-- Repeat -->
@@ -72,12 +76,71 @@
             android:textSize="14sp"
             android:switchPadding="10sp"
             android:layout_below="@id/time"/>
-        <android.support.v7.widget.AppCompatCheckBox
-            android:layout_width=""
-            android:layout_height="" />
+        <CheckBox
+            android:id="@+id/repeat_mon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/repeat_switch"
+            android:enabled="false"
+            android:checked="false"
+            android:text="MON" />
+        <CheckBox
+            android:id="@+id/repeat_tue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/repeat_mon"
+            android:layout_below="@id/repeat_switch"
+            android:enabled="false"
+            android:checked="false"
+            android:text="TUE" />
+        <CheckBox
+            android:id="@+id/repeat_wed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/repeat_tue"
+            android:layout_below="@id/repeat_switch"
+            android:enabled="false"
+            android:checked="false"
+            android:text="WED" />
+        <CheckBox
+            android:id="@+id/repeat_thu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/repeat_wed"
+            android:layout_below="@id/repeat_switch"
+            android:enabled="false"
+            android:checked="false"
+            android:text="THU" />
+        <CheckBox
+            android:id="@+id/repeat_fri"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/repeat_thu"
+            android:layout_below="@id/repeat_switch"
+            android:enabled="false"
+            android:checked="false"
+            android:text="FRI" />
+        <CheckBox
+            android:id="@+id/repeat_sat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/repeat_mon"
+            android:enabled="false"
+            android:checked="false"
+            android:text="SAT" />
+        <CheckBox
+            android:id="@+id/repeat_sun"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/repeat_tue"
+            android:layout_toRightOf="@id/repeat_sat"
+            android:layout_marginLeft="6dp"
+            android:enabled="false"
+            android:checked="false"
+            android:text="SUN" />
 
         <!-- Location -->
-        <!--<TextView
+        <TextView
             android:id="@+id/location_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -85,7 +148,7 @@
             android:textColor="#333333"
             android:textSize="14sp"
             android:layout_marginTop="16dp"
-            android:layout_below="@id/time"/>
+            android:layout_below="@id/repeat_sat"/>
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/location"
             android:layout_width="match_parent"
@@ -94,7 +157,48 @@
             android:hint="Click here to select a location"
             android:textColor="@color/text_color"
             android:layout_below="@id/location_label"
-            />-->
+            android:editable="false"
+            />
+
+        <!-- Description -->
+        <TextView
+            android:id="@+id/description_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Description"
+            android:textColor="#333333"
+            android:textSize="14sp"
+            android:layout_marginTop="16dp"
+            android:layout_below="@id/location"/>
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="Enter description here"
+            android:textColor="@color/text_color"
+            android:layout_below="@id/description_label"
+            android:inputType="textMultiLine"
+            android:minLines="2"
+            />
+
+        <!-- Image -->
+        <TextView
+            android:id="@+id/image_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Image"
+            android:textColor="#333333"
+            android:textSize="14sp"
+            android:layout_marginTop="16dp"
+            android:layout_below="@id/description"/>
+        <ImageView
+            android:id="@+id/image"
+            android:adjustViewBounds="true"
+            android:scaleType="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/image_label"/>
 
     </RelativeLayout>
 
