Rewrote some codes for setting location reminders
need testing

--- a/app/src/main/res/layout/edit_location_container.xml
+++ b/app/src/main/res/layout/edit_location_container.xml
@@ -6,6 +6,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <include layout="@layout/edit_location" />
+        <include layout="@layout/set_location_reminder" />
     </ScrollView>
 </LinearLayout>
