--- a/app/src/main/res/layout/set_location_reminder.xml
+++ b/app/src/main/res/layout/set_location_reminder.xml
@@ -2,10 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/setTimeReminderLayout"
+    android:id="@+id/setLocationReminderLayout"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.TimeReminderActivity">
+    tools:context=".view.LocationReminderActivity">
 
     <!-- Header -->
     <RelativeLayout
